iphone 6/6plus web app only

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 <head>
 <link href="css/styles.css" rel="stylesheet" media="screen">
   <meta charset="UTF-8">
-  <title>poopay</title>
+  <title>pooPay</title>
 </head>
 <body>
   <div id="container">
-    <h1 id="h1_poopay">poopay</h1>
+    <h1 id="h1_poopay">pooPay</h1>
   </div>
 <script src="js/app.js"></script>
 </body>
